# django_course

./: .env  .env.sample  pyproject.toml  readme.md  requirements.txt
config/: settings.py  urls.py
mailing/: admin.py  context_processors.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: send_mailings.py
mailing/migrations/: 0001_initial.py  0002_initial.py
mailing/templates/mailing/: adding_mailing_attempt.html  base.html  footer.html  home.html  inc_menu.html  mailing.html  mailing_confirm_delete.html  mailing_form.html  mailing_list_statistics.html  mailings.html  message.html  message_confirm_delete.html  message_form.html  messages.html  recipient.html  recipient_confirm_delete.html  recipient_form.html  recipients_list.html  user_list_manager.html
sending_messages/: models.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: create_manager.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
users/templates/users/: email_confirmation.html  login.html  logout.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  profile.html  profile_form.html  register.html
